# 2021-test

./: CMakeLists.txt
QtTest/QFileTest/: main.qml.autosave
QtTest/basiclayouts/: dialog.cpp
boostlog/: main.cpp
file_io_test/src/: 01_fopen_test.cpp  02_fprintf_test.cpp  03_fscanf_stdin_test.cpp  03_fscanf_test.cpp  04_fputs_test.cpp  05_fwrite_test.cpp  06_fgets_test.cpp  07_fread_test.cpp  08_fwrite_binary.cpp  09_fread_binary.cpp  10_fcntl_creat.cpp  11_fcntl_open.cpp  12_unistd_read.cpp  13_unistd_write.cpp
log/: log_test_01.txt  log_test_02.txt  log_test_03.txt  log_test_06.txt  log_test_07.txt
log/log_test_04/: 2021_8_23_15_4_47.txt  2021_8_23_15_5_0.txt  2021_8_23_15_5_23.txt  2021_8_23_15_5_33.txt
log/log_test_05/: 2021_8_23_16_20.txt  2021_8_23_16_21.txt  2021_8_24_11_20.txt
logTest/: CMakeLists.txt
logTest/basic_logger/log/: log_test02.txt
logTest/basic_logger/log/log_test04/: 2021_10_25_9_54_46.txt
logTest/basic_logger/log/log_test05/: 2021_10_25_10_1.txt  2021_10_25_9_57.txt
logTest/basic_logger/src/: log_test01.cpp  log_test04.cpp  log_test06.cpp  log_test07.cpp
logTest/basic_logger/src/log_test08/: logger.cpp  logger.h
logTest/boost_logger/: CMakeLists.txt
logTest/boost_logger/src/: boost_log01.cpp
log_test/basic_logger/: CMakeLists.txt
log_test/basic_logger/log/: log_test03.txt  log_test07.txt  log_test08.txt
log_test/basic_logger/log/log_test04/: 2021_10_25_9_55_5.txt
log_test/basic_logger/log/log_test05/: 2021_10_25_9_58.txt
log_test/basic_logger/src/: log_test02.cpp  log_test03.cpp  log_test05.cpp  log_test_05_1.cpp
log_test/basic_logger/src/log_test08/: main.cpp
log_test/boost_logger/my_logger/: my_logger.hpp
log_test/boost_logger/src/: boost_log02.cpp  boost_log03.cpp  boost_log04.cpp  boost_log05.cpp  boost_log06.cpp  boost_log10.cpp
qt_test/basiclayouts/: dialog.h
qt_test/build-test-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  qrc_qml.cpp  test
qt_test/qtQuick/CppEx01/: documenthandler.cpp  main.qml
qt_test/qtQuick/JsonEx02/build-JsonEx02-Desktop_Qt_5_15_2_GCC_64bit-Debug/: JsonEx02
qt_test/qtQuick/build-headerTest-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  headerTest  qrc_qml.cpp
qt_test/qtQuick/fileDialogTest/: main.qml
qt_test/qtWidget/qfileReadWrite/: Makefile  qfileReadWrite.pro.user.3.0-pre1
qt_test/smMissionJsonTest/: SmMission.cpp  SmMission.h  SmMissionManager.cpp  SmMissionManager.h  main.cpp
qt_test/smMissionList/: MissionLists.qml  SmMissionDialog.qml  main.qml  qml.qrc
qt_test/smMissionList02/: main.qml
qt_test/smMissionList03/: MissionLists.qml  SmMissionDialog.qml  SmMissionLists.qml  jsoncontroller.cpp  jsoncontroller.h  main.cpp  main.qml  qml.qrc
qt_test/smMissionList04/: SmMissionDialog.qml  main.qml  qml.qrc
qt_test/smMissionList04/build-smMissionList04-Desktop_Qt_5_15_2_GCC_64bit-Debug/: smMissionList04
qt_test/smMissionList05/: SmMission.cpp  SmMission.h  SmMissionDialog.qml  SmMissionList.qml  SmMissionManager.cpp  SmMissionManager.h  SmMissionTableModel.cpp  SmMissionTableModel.h  main.qml  qml.qrc
qt_test/smMissionList05-booiledit/: SmMission.h  SmMissionList.qml  SmMissionManager.cpp  main.cpp  main.qml  smMissionList05.pro
qt_test/smMissionList05-booiledit/build-smMissionList05-booiledit-Desktop_Qt_5_15_2_GCC_64bit-Debug/: smMissionList05
qt_test/smMissionList05/build-smMissionList05-Desktop_Qt_5_15_2_GCC_64bit-Debug/: smMissionList05
qt_test/test/: main.qml
serial_test/read/: CMakeLists.txt
serial_test/read/src/: ex01.cpp  ex02.cpp  ex03.cpp  readTest01.cpp  readTest02.cpp  readTest03.cpp  readTest04.cpp
serial_test/write/: CMakeLists.txt
serial_test/write/src/: ex01.cpp  write01.cpp  write02.cpp  write03.cpp  write03_01.cpp  write03_02.cpp  write03_03.cpp  write03_04.cpp
src/: log_test_01.cpp  log_test_02  log_test_02.cpp  log_test_03.cpp  log_test_04.cpp  log_test_05.cpp  log_test_06.cpp  log_test_07.cpp
unit_test/: CMakeLists.txt
unit_test/src/: ex_circular_queue.cpp  ex_circular_queue.hpp  my_circular_queue.cpp  my_circular_queue.hpp  my_deque.cpp  my_deque_class.cpp  my_deque_class.hpp  my_deque_template.cpp  my_deque_template.hpp  my_queue_c.c  my_queue_c.h  my_queue_class.cpp  my_queue_class.hpp  my_queue_struct.c  my_queue_struct.h  my_stack.cpp  my_stack.hpp
unit_test/tests/: CMakeLists.txt  ex_circular_queue_test.cpp  my_circular_queue_test.cpp  my_deque_class_test.cpp  my_deque_template_test.cpp  my_queue_class_test.cpp  my_queue_struct_test.cpp  my_queue_test.cpp  my_stack_test.cpp
